--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"token": "MTMzNTI1MDMxNTU3ODE3OTYwNQ.GhJOT7.W9bIEHTTj914F4y9N6lBCAj5rekH2al3hyzXBo",
-    "guildId": "1327444708070396015",
-    "server_ip": "185.245.99.99",
-    "server_port": "22057"
+	"token": "TOKEN_HERE",
+    "guildId": "",
+    "server_ip": "",
+    "server_port": ""
 }
